<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".PatientPage">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome Users"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp" />

    <TextView
        android:id="@+id/quoteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remember to take care of yourself along the way"
        android:textStyle="italic"
        android:textSize="16dp"
        android:textColor="@color/lightgreen"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10dp" />

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="12dp"
        android:src="@drawable/patientpage" />

    <TextView
        android:id="@+id/instructionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select the specialist of your choice and proceed to schedule an appointment."
        android:layout_gravity="center_horizontal"
        android:textColor="@color/lightgreen"
        android:padding="10dp"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/editext_border"
        android:backgroundTint="@color/lightgrey"
      android:backgroundTintMode="screen"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp"
                android:background="@drawable/editext_border"
                android:onClick="onSpecialistClick">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/cardiologist"
                    android:contentDescription="@string/cardiologist" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cardiologist"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:paddingTop="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp"
                android:background="@drawable/editext_border"
                android:onClick="onSpecialistClick">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/dentist"
                    android:contentDescription="@string/dentist" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dentist"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:paddingTop="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp"
                android:background="@drawable/editext_border"
                android:onClick="onSpecialistClick">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/psychologist"
                    android:contentDescription="@string/psychologist" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Psychologist"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:paddingTop="8dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp"
                android:background="@drawable/editext_border"
                android:onClick="onSpecialistClick">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/dermatologist"
                    android:contentDescription="@string/dermatologist" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dermatologist"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:paddingTop="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp"
                android:background="@drawable/editext_border"
                android:onClick="onSpecialistClick">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/pediatrician"
                    android:contentDescription="@string/pediatrician" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pediatrician"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:paddingTop="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp"
                android:background="@drawable/editext_border"
                android:onClick="onSpecialistClick">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/neurologist"
                    android:contentDescription="@string/neurologist" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Neurologist"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:paddingTop="8dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp"
                android:background="@drawable/editext_border"
                android:onClick="onSpecialistClick">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/opthalmologist"
                    android:contentDescription="@string/opthalmologist" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Opthalmologist"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:paddingTop="8dp"/>
            </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="@drawable/editext_border"
                    android:onClick="onSpecialistClick">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/gynecologist"
                        android:contentDescription="@string/gynecologist" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gynecologist"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:paddingTop="8dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:text="Go Back"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:layout_marginTop="13dp" />

</LinearLayout>
